Fixed bug with editor overflow in new style

--- a/web/app/webroot/css/ghmanager.main.css
+++ b/web/app/webroot/css/ghmanager.main.css
@@ -70,4 +70,6 @@ body {
 	right:5px;
     top:5px;
     margin-bottom:10px;
+    position: inherit !important;
+    height: inherit !important;
 }
